upd myself info

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Houjinan.GitHub.io</h1>
+      <h1><a href="http://houjinan.github.io" class="a_title">Hanks</a></h1>
         <h2>Hanks&#39;s Blog</h2>
         <a href="https://github.com/houjinan" class="button"><small>Follow me on</small> GitHub</a>
       </div>
@@ -29,9 +29,9 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>欢迎来到我的 Github Blog.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>2014总结</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
