--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-      <h1><a href="http://houjinan.github.io" class="a_title">Hanks</a></h1>
+      <h2><a href="http://houjinan.github.io" class="a_title">奋不顾身的走下去</a></h2>
         <h2>Hanks&#39;s Blog</h2>
         <a href="https://github.com/houjinan" class="button"><small>Follow me on</small> GitHub</a>
       </div>
